microservices-demo/kustomize/dev/frontend/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-microservices-demo
spec:
  tls:
    - hosts:
      - "*.<YOUR_APP_DOMAIN_HERE>"
      secretName: letsencrypt-frontend-dev
  rules:
    - host: <SUBDOMAIN>.<YOUR_APP_DOMAIN_HERE>
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
  ingressClassName: nginx
